--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 anyhow = "1.0.40"
 chrono = "0.4.19"
 chrono-tz = "0.5.3"
+crossterm = "0.19.0"
 home = "0.5.3"
 ical = "0.7.0"
-tui = "0.15.0"
+tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
