--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ chrono-tz = "0.5.3"
 crossterm = "0.19.0"
 home = "0.5.3"
 ical = "0.7.0"
+signal-hook = "0.3.9"
 tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
