--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.40"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["unstable-locales"] }
 chrono-tz = "0.5.3"
 crossterm = "0.19.0"
 home = "0.5.3"
 ical = "0.7.0"
+locale_config = "0.3.0"
 signal-hook = "0.3.9"
 tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
